--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,27 @@
+/* Webfont:  Rubrik-Regular */
+@font-face {
+    font-family:'Rubrik';
+	font-style:normal;
+	font-weight:400;
+	src:	url(http://www.r-c.ca/_font/Rubrik/Rubrik-Regular.eot);
+	src:	url(http://www.r-c.ca/_font/Rubrik-Regular.eot?#iefix) format("embedded-opentype"),
+			url(http://www.r-c.ca/_font/Rubrik/Rubrik-Regular.woff) format("woff"),
+			url(http://www.r-c.ca/_font/Rubrik/Rubrik-Regular.svg#Rubrik-Regular) format("svg"),
+			url(http://www.r-c.ca/_font/Rubrik/Rubrik-Regular.ttf) format("truetype")
+}
+    
+/* Webfont:  Rubrik-Light */
+@font-face {
+    font-family:'RubrikLt';
+	font-style:normal;
+	font-weight:400;
+	src:	url(http://www.r-c.ca/_font/Rubrik/Rubrik-Light.eot);
+	src:	url(http://www.r-c.ca/_font/Rubrik-Light.eot?#iefix) format("embedded-opentype"),
+			url(http://www.r-c.ca/_font/Rubrik/Rubrik-Light.woff) format("woff"),
+			url(http://www.r-c.ca/_font/Rubrik/Rubrik-Light.svg#Rubrik-Light) format("svg"),
+			url(http://www.r-c.ca/_font/Rubrik/Rubrik-Light.ttf) format("truetype")
+}
+
 body {
 	 padding: 0px 0 25px 0;
 	 font-family: "Open Sans";
@@ -23,20 +47,21 @@ article {
 }
 
 h1 {
-	 font-family: "mf-rubrik-202426";
-	 text-align: right;
-	 text-transform: capitalize;
-	 padding: 0px;
-	 color: rgba(255, 255, 255, 1);
-	 background-repeat: no-repeat;
-	 background-size: cover;
-	 font-size: 1.6em;
-	 line-height: 1em;
-	 letter-spacing: -1px;
+   font-family: 'Rubrik';
+   text-align: right;
+   text-transform: capitalize;
+   padding: 0px;
+   color: rgba(255, 255, 255, 1);
+   background-repeat: no-repeat;
+   background-size: cover;
+   font-size: 1.6em;
+   line-height: 1em;
+   letter-spacing: -1px;
+   text-shadow: 2px 2px 6px #000;
 }
 
 p.intro {
-	 font-family: "Georgia W01 Regular";
+	 font-family: "Georgia";
 	 border-top: 1px;
 	 border-bottom: 1px;
 	 padding: 0px 0px 15px 0px;
@@ -347,7 +372,7 @@ p.intromobile {
 p.soustitre {
 	 text-align: right;
 	 font-size: 1.1em;
-	 font-family: "Georgia W01 Regular";
+	 font-family: "Georgia";
 	 text-transform: inherit;
 	 color: rgba(255, 255, 255, 1);
 	 line-height: 1em;
