--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,12 @@ body {
 	 font-weight: 400;
 	 font-style: normal;
 	 line-height: 0px;
-	 background-color: white;
+	 background-color: red;
+}
+
+.clearfix {
+    background-color: white;
+
 }
 
 article {
@@ -44,6 +49,7 @@ article {
 	 font-weight: 400;
 	 font-style: normal;
 	 line-height: 21px;
+
 }
 
 h1 {
