corr div clearfix avec bkg blanc, modif balise <head> pour métrie

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 	 font-weight: 400;
 	 font-style: normal;
 	 line-height: 0px;
-	 background-color: red;
+	 background-color: white;
 }
 
 .clearfix {
