--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,20 @@ img.square {
 	 padding: 0px 0px 20px 0px;
 }
 
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 .header {
 	 text-align: center;
 	 padding: 4em 0;
