--- a/css/chart-style.css
+++ b/css/chart-style.css
@@ -15,7 +15,7 @@ div {
 
 .chart {
   position: relative;
-  padding-bottom: 4px;
+/*  padding-bottom: 4px;*/
   font-family: "Open Sans";
   font-weight: 300;
 }
@@ -46,7 +46,7 @@ div {
 }
 
 .bar.chart .label {
-  border: 1px solid #eee;
+  border: 1px solid white;
   padding: 0;
 }
 
@@ -106,7 +106,8 @@ div {
 
 #visu-retweets {
   height: 350px;
-  background-color: #f2f2f2;    
+  background-color: #f2f2f2;
+
 }
 
 #visu-evenements {
@@ -184,11 +185,16 @@ div {
   height: 1em;
   display: inline-block;
   margin-right: 2px;
+
 }
 
 .legend {
   cursor: pointer;
-  margin-right: 20px;
+  margin-top: 5px;    
+    
+/*  margin-right: 20px;*/
+  padding: 10px 10px 10px 10px;
+  display:inline-flex;
 }
 
 @media (max-width: 1000px) {
@@ -236,12 +242,12 @@ div {
 
 @media (min-width: 800px) {
 #image-container {
-  height: 370px;
-  width: 700px;    
-  background-image: url("../img/cinq_maires_5col-2.png");
-  padding-right: 150px;    
-  margin: 10px auto;
-  background-position: 0px -50px;  
+  height: 505px;
+  width: 100%;    
+  background-image: url("../img/cinq_maires_3col_600x475-hd.png");
+  background-size: 600px 475px;    
+  padding-right: 150px;
+  background-position: center;
 }
 }
 
@@ -249,11 +255,11 @@ div {
 @media (max-width: 800px) {
   #image-container {
     text-align: left;  
-    height: 580px;
+    height: 505px;
     width: 100%; 
-    background-image: url("../img/cinq_maires_3col.png");
+    background-image: url("../img/cinq_maires_3col_600x475-hd.png");
     background-size: 600px 475px;
-    background-position: 0px 85px;   
+    background-position: center;
   }
     
   #visu-bulle {
@@ -276,12 +282,12 @@ div {
 
 @media (max-width: 620px) {
   #image-container {
-    height: 770px;
+    height: 678px;
     width: 100%;
-    background-image: url("../img/cinq_maires_2col.png");
-    background-size: 300px 648px;  
-    background-position: 100px 95px;
-    text-align: left;  
+    background-image: url("../img/cinq_maires_2col_300x648-hd.png");
+    background-size: 300px 648px; 
+    background-position: center;  
+    text-align: left; 
   }
     
   #visu-bulle {
@@ -291,15 +297,17 @@ div {
 
 @media (max-width: 480px) {
   #image-container {
-    height: 725px;
+    height: 620px;
     width: 100%;
-    background-image: url("../img/cinq_maires_2col.png");
-    background-size: 250px 540px;  
-    background-position: 0px 165px;
-    text-align: left; 
+    background-image: url("../img/cinq_maires_2col_250x590-hd.png");
+    background-size: 250px 590px;
+    background-position: center;  
   }
     
   #visu-bulle {
     height: 250px;
+  } 
+  .legend {
+    padding: 5px 5px 5px 5px;
   }
 }
