--- a/css/chart-style.css
+++ b/css/chart-style.css
@@ -191,10 +191,9 @@ div {
 .legend {
   cursor: pointer;
   margin-top: 5px;    
-    
-/*  margin-right: 20px;*/
   padding: 10px 10px 10px 10px;
-  display:inline-flex;
+  height: 35px;
+  line-height: 35px;
 }
 
 @media (max-width: 1000px) {
