--- a/css/chart-style.css
+++ b/css/chart-style.css
@@ -91,7 +91,7 @@ div {
 
 .bubble.chart .node {
   border: 0px solid silver;
-  background-color: #fbb977;
+  background-color: #647D87;/*couleur des bulles*/
   cursor: pointer;
 }
 
@@ -169,9 +169,10 @@ div {
 }
 
 .chart-tooltip {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(242, 242, 242, 1);
   border-radius: 5px;
   padding: 4px;
+  line-height: 120%;    
   margin-top: -30px;
   margin-left: 5px;
 }
