--- a/css/chart-style.css
+++ b/css/chart-style.css
@@ -35,7 +35,7 @@ div {
 }
 
 .chart .hover {
-  border: 3px solid #4c4c4c !important;
+/*  border: 3px solid #4c4c4c !important;*/
 }
 .line.chart .dot {
   background-color: #fbb977;
@@ -73,6 +73,17 @@ div {
   background-color: #e6e6e6;
 }
 
+.bar2d.chart .bar:hover {
+  background-color: #cc0000;
+  color: white;
+}
+
+/*
+.bar:hover {
+  background-color: #cc0000;
+}
+*/
+
 .bar2d.chart .label {
   width: 20px;
   height: 20px;
@@ -95,6 +106,12 @@ div {
   background-color: #d9d9d9;
   cursor: pointer;
 }
+
+.bubble.chart .node:hover {
+  color: white;
+  background-color: #cc0000;
+}
+
 
 .bubble.chart .value {
   font-size: 0.4em;
@@ -175,13 +192,27 @@ div {
   background-color: rgba(255, 255, 255, 0.92);
   border-radius: 4px;
   padding: 8px;
-  margin-top: -30px;
-  margin-left: 5px;
+  margin-top: -20px;
+  margin-left: -60px;
   line-height: 1.3em;
   font-size: .9em;
   color: #333333;
   border: 1px solid #cccccc;
+  max-width: 200px; 
 }
+
+#visu-bulle .chart-tooltip {   
+  margin-top: -45px;
+  margin-left: -20px;
+  max-width: 80%;    
+}
+
+#visu-retweets .chart-tooltip {   
+  margin-top: -45px;
+  margin-left: 10px;
+  max-width: 100%;
+}
+
 
 .legend-container {
   margin-top: 10px;
@@ -247,26 +278,28 @@ div {
 
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1100px) {
 #image-container {
   height: 505px;
   width: 100%;    
   background-image: url("../img/cinq_maires_5col_700x435-hd.png");
   background-size: 700px 435px;    
-  padding-right: 150px;
   background-position: center;
+  padding-right: 200px;
+  padding-top: 45px
 }
 }
 
 
-@media (max-width: 800px) {
+@media (max-width: 1100px) {
   #image-container {
     text-align: left;  
-    height: 505px;
+    height: 580px;
     width: 100%; 
     background-image: url("../img/cinq_maires_3col_600x475-hd.png");
     background-size: 600px 475px;
-    background-position: center;
+    background-position: center bottom;
+    margin-bottom: 20px;  
   }
     
   #visu-bulle {
@@ -289,11 +322,12 @@ div {
 
 @media (max-width: 620px) {
   #image-container {
-    height: 678px;
+    height: 750px;
     width: 100%;
     background-image: url("../img/cinq_maires_2col_300x648-hd.png");
     background-size: 300px 648px; 
-    background-position: center;  
+    background-position: center bottom;
+    margin-bottom: 20px;  
     text-align: left; 
   }
     
@@ -302,13 +336,14 @@ div {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 550px) {
   #image-container {
-    height: 620px;
+    height: 740px;
     width: 100%;
     background-image: url("../img/cinq_maires_2col_250x590-hd.png");
     background-size: 250px 590px;
-    background-position: center;  
+    background-position: center bottom;
+    margin-bottom: 20px;  
   }
     
   #visu-bulle {
@@ -320,5 +355,16 @@ div {
   .bar2d.chart .label {
     margin-left: -1px;
   }
+
+}
+
+
+@media (max-width: 500px) {
+  #image-container {
+    height: 770px;
+  
+  }
+    
+
 
 }
