--- a/css/chart-style.css
+++ b/css/chart-style.css
@@ -10,7 +10,7 @@ div {
 .chart-container {
   position: relative;
   height: 400px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .chart {
@@ -84,6 +84,8 @@ div {
 }
 */
 
+#
+
 .bar2d.chart .label {
   width: 20px;
   height: 20px;
@@ -125,6 +127,7 @@ div {
 #visu-retweets {
   height: 350px;
   background-color: #f2f2f2;
+  margin-bottom: 20px;
 
 }
 
@@ -140,6 +143,7 @@ div {
 #visu-reponses1, #visu-reponses2 {
   width: 50%;
   float: left;
+  margin-bottom: 40px;
 }
 
 #visu-reponses .chart-inner-container {
