--- a/css/chart-style.css
+++ b/css/chart-style.css
@@ -284,13 +284,14 @@ div {
 
 @media (min-width: 1100px) {
 #image-container {
-  height: 505px;
+  height: 435px;
   width: 100%;    
   background-image: url("../img/cinq_maires_5col_700x435-hd.png");
   background-size: 700px 435px;    
   background-position: center;
   padding-right: 200px;
-  padding-top: 45px
+  padding-top: 0px;
+  margin-bottom: 10px;
 }
 }
 
@@ -347,7 +348,7 @@ div {
     background-image: url("../img/cinq_maires_2col_250x590-hd.png");
     background-size: 250px 590px;
     background-position: center bottom;
-    margin-bottom: 20px;  
+    margin-bottom: 10px;  
   }
     
   #visu-bulle {
