--- a/css/style.css
+++ b/css/style.css
@@ -309,13 +309,14 @@ img.square {
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
 	height: 0;
+    margin-bottom: 20px;
 }
 .videoWrapper iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 95%;
+	height: 101%;
 }
 
 .header {
